# ro-doc-classification

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
MOROCO/: loadDataSet.py
models/full-base/: config.json
models/full-small/: config.json
models/lora-base/: README.md  adapter_config.json
models/lora-small/: adapter_config.json
outputs/full-base/: config.toml  eval_results.json  train_metrics.json  training_history.json
outputs/full-data-scarce/: config.toml  eval_results.json  train_metrics.json  training_history.json
outputs/full-small/: eval_results.json  train_metrics.json  training_history.json
outputs/lora-base/: eval_results.json  train_metrics.json  training_history.json
outputs/lora-small/: eval_results.json  train_metrics.json  training_history.json
src/data/: dataset.py
src/eval/: metrics.py
src/notebooks/: finetune_full.ipynb  finetune_lora.ipynb
src/training/: full.py  lora.py
src/utils/: config.py
