[project]
name = "ro-doc-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
